switched out fully deprecated NPM package request-promise-native for node-fetch

--- a/IoTCIntegration/package.json
+++ b/IoTCIntegration/package.json
@@ -8,7 +8,7 @@
     "azure-iot-device": "^1.7.4",
     "azure-iot-device-http": "^1.7.4",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.5"
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {},
   "scripts": {},
